<resources>
    <string name="app_name">Chatting App</string>
    <string name="password">Password</string>
    <string name="email_id">Email-id</string>
    <string name="login">login</string>
    <string name="newaccount">Create a new account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
    <string name="firstcap_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="or">OR</string>
    <string name="show_password">Show Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">dummy_Text</string>

    <string name="type_a_message">Type a message</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="mr0kaushik">©mr0kaushik</string>
    <string name="reset_password">Reset Password</string>
    <string name="clicking">You will get an email on clicking the RESET button.</string>
    <string name="reset">Reset</string>
    <string name="enter_your_e_mail_id">Enter Your E-Mail id</string>
    <string name="search_user">Search user...</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="chatting_app">Chatting App</string>
    <string name="name">Name</string>
    <string name="about">About</string>

</resources>
