<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatting_app"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:visibility="gone"
        android:foregroundGravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />



    <!--Email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_outline_black_24dp"
            android:layout_margin="8dp"
            android:paddingTop="16dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:importantForAutofill="auto"
                android:textColorHighlight="#7cff88"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="14dp"
                android:hint="@string/email_id"
                android:layout_marginEnd="8dp"
                android:background="@null"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!--Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:layout_margin="8dp"
            android:paddingTop="16dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:focusableInTouchMode="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:focusableInTouchMode="true"
                android:textColorHighlight="#7cff88"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:paddingTop="14dp"
                android:background="@null"
                android:layout_marginEnd="8dp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/login"
        android:enabled="false"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGrey"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:textColor="@color/colorWhite"
        android:text="@string/register"
        android:background="@color/colorGrey"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mr0kaushik"
        android:textSize="25sp"
        android:textStyle="bold"
        />

</LinearLayout>