<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="16dp"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:focusable="auto"
            android:inputType="textEmailAddress"
            android:textColorHighlight="#7cff88"
            android:layout_margin="30dp"
            android:hint="@string/enter_your_e_mail_id"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="18sp"
            android:id="@+id/btn_reset"
            android:background="@color/colorGrey"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clicking"
            android:text="@string/clicking"
            android:layout_margin="12dp"
            android:visibility="gone"/>
    </LinearLayout>


</RelativeLayout>