

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">



    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:id="@+id/edit_area"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newaccount"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:layout_margin="8dp"
            android:visibility="gone"/>


        <!--FirstName-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_margin="8dp"
                android:paddingTop="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fName"
                    android:textColorHighlight="#7cff88"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/name"
                    android:layout_marginEnd="8dp"
                    />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>



        <!--Username-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_outline_black_24dp"
                android:layout_margin="8dp"
                android:paddingTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:textColorHighlight="#7cff88"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/username"
                    android:layout_marginEnd="8dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_outline_black_24dp"
                android:layout_margin="8dp"
                android:paddingTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:textColorHighlight="#7cff88"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_id"
                    android:layout_marginEnd="8dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:layout_margin="8dp"
                android:paddingTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:textColorHighlight="#7cff88"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:layout_marginEnd="8dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Confirm Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:layout_margin="8dp"
                android:paddingTop="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password"
                    android:textColorHighlight="#7cff88"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/confirm_password"
                    android:layout_marginEnd="8dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_area"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:padding="4dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorWhite"
        android:text="@string/btn_register"
        android:background="@color/colorButton"
        />
</RelativeLayout>