<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserProfileActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/bar_layout"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/user_profile_pic"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_profile_pic"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_for_name"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_skyblue_24dp"
                    android:layout_margin="8dp"
                    android:paddingTop="16dp"
                    android:layout_weight="1" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <TextView
                        android:id="@+id/name_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorDarkGrey"
                        />
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_tag"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorBlack"
                        />

                </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_for_about"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_outline_black_24dp"
                    android:layout_margin="8dp"
                    android:paddingTop="16dp"
                    android:layout_weight="1" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <TextView
                        android:id="@+id/about_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorDarkGrey"
                        />
                    <TextView
                        android:id="@+id/tvAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_tag"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:focusableInTouchMode="true"
                        android:scrollHorizontally="true"
                        android:textColor="@color/colorBlack"
                        />

                </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_for_user_name"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_skyblue_24dp"
                    android:layout_margin="8dp"
                    android:paddingTop="16dp"
                    android:layout_weight="1" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <TextView
                        android:id="@+id/userName_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorDarkGrey"
                        />
                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/userName_tag"
                        android:scrollHorizontally="true"
                        android:focusableInTouchMode="true"
                        android:paddingTop="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorBlack"
                        />

                </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/gray_light"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
</ScrollView>